--- a/index.html
+++ b/index.html
@@ -38,5 +38,10 @@
                 <p class="point-description">Listen to your music on the go. This streaming service is available on all mobile platforms.</p>
             </div>
         </section>
+        <script>
+            // our JavaScript will go here
+            alert("Why hello there! I'm a wee bit of JavaScript.");
+            
+        </script>        
     </body>
 </html>
